# eqmd

./: .coveragerc  .dockerignore  .env.example  .gitignore  .markdownlintignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.pi  Dockerfile.synapse  Gemini.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_CONTEXT.md  README.md  README_reset_script.md  SCHEDULED_COMPLIANCE_MONITORING.md  TESTING_IMPLEMENTATION_SUMMARY.md  TODOs.md  VERTICAL_SLICE_6_IMPLEMENTATION.md  backup.sh  backup_permissions.json  create_eqmd_user.sh  current_permissions.json  db.sqlite3  docker-compose-secure.yml.example  docker-compose.agent.yml  docker-compose.deploy.yml  docker-compose.hardened.yml  docker-compose.prod.yml  docker-compose.yml  hospital_architecture_analysis.md  install-minimal.sh  install.sh  nginx.conf  nginx.conf.example  package-lock.json  package.json  phase3_verification.json  (+9 more)
.githooks/: pre-commit
.taskmaster/: .mcp.json  config.json  state.json
apps/: __init__.py
assets/: index.js  sw.js
config/: logging_handlers.py  settings.py  test_settings.py  urls.py
docs/: ARCHITECTURE_AUDIT_RESULTS.md  CLEANUP_SUMMARY.md  DOCUMENTATION_STANDARDS.md  MIGRATION.md  README.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  TRANSLATION_AUDIT_RESULTS.md  admin_guide_medical_specialties.md  alert-system-standardization-plan.md  consent_forms.md  data-export.md  database-reset.md  domain-migration-guide.md  firebase-import.md  fts-vector-indexation.md  image_processing_flow.md  page-navigation-loading-indicator-plan.md  postgresql-migration.md  reference-data.md  reset.md  sample-data-population.md  styling.md  testing-strategy.md
element/: config.json  config.json.template  custom.css
errors/: bundle-simplification-plan.md  changepasswordtemplateerror.txt  claude-video-compression-fix-report.md  gemini-session-videoclip.txt  investigation-plan.md  single_photo_create_error.md
fixtures/: MERGED_medications.csv  apac-fields.txt  apac-final.json  apac.json  aviso-cirurgia.json  cid.csv  firebase-ward-map.json  hemoderivados.json  procedimentos.csv  sisphgrs-wards-export.json  sol-transf-interna.json  sol-uti-cirurgica.json  solicitacao-antimicrobiano.json  solicitacao-exame-sus.json  solicitacao-incineracao.json  solicitacao-uti.json  termo-consentimento-arterial.md  termo-mutilacao.md
matrix/: homeserver.yaml  homeserver.yaml.template  log_config.yaml  signing.key
nginx/: README.md  element.conf  element.conf.template  matrix.conf  matrix.conf.template
oldprompts/: IMPLEMENTATION_COMPLETE.md  VERTICAL_SLICE_5_IMPLEMENTATION.md  acctsPrompt.md  pt_model.py
openspec/: AGENTS.md  config.yaml  project.md
prompts/: admission-discharge-edit-permissions-plan.md  advanced-llm-architecture-requirements.md  augment-report.md  claude-report.md  codex-report.md  complete_signup_blocking_plan.md  concent_forms.md  dashboard_cache_implementation_plan.md  docker-volumes-implementation-plan.md  error_handling_implementation_plan.md  forced_password_change_implementation_plan.md  import-patient-data.md  llm-architecture-adherence-report.md  logout-page.md  o3-report-opencode.md  (+17 more)
(+1531 files in other folders)
