[project]
name = "eqmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2.1",
    "django-allauth>=0.57.0",
    "django-drf-filepond>=0.5.0",
    "django-model-utils>=5.0.0",
    "django-simple-history>=3.10.1",
    "django-storages>=1.14.6",
    "django-taggit>=6.1.0",
    "faker>=33.1.0",
    "ffmpeg-python>=0.2.0",
    "markdown>=3.8.2",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pypdf>=5.8.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "reportlab>=4.4.2",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "django-debug-toolbar>=5.2.0",
    "factory-boy>=3.3.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
]
prod = [
    "gunicorn>=23.0.0",
]
