[project]
name = "eqmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2.1",
    "django-allauth>=0.57.0",
    "django-drf-filepond>=0.5.0",
    "django-model-utils>=5.0.0",
    "django-oidc-provider>=0.9.0",
    "django-simple-history>=3.10.1",
    "django-storages>=1.14.6",
    "django-taggit>=6.1.0",
    "faker>=33.1.0",
    "ffmpeg-python>=0.2.0",
    "firebase-admin>=7.1.0",
    "markdown>=3.8.2",
    "mistune>=3.0,<4",
    "matrix-nio>=0.24.0",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pypdf>=5.8.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "reportlab>=4.4.2",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "django-debug-toolbar>=5.2.0",
    "django-stubs>=5.1.3",
    "factory-boy>=3.3.3",
    "mypy>=1.18.2,<1.19",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
]
prod = [
    "gunicorn>=23.0.0",
]

[tool.mypy]
python_version = "3.12"
# Keep django plugin disabled in Phase 0 due internal crashes in current stack.
# Re-evaluate enabling `mypy_django_plugin.main` during rollout hardening.
exclude = "(^|/)migrations/"
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["config.settings", "config.test_settings"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.test_settings"
